force-app/main/default/objects/Prospect__c/fields/Created_From_Account__c.field-meta.xml
<CustomField>
    <fullName>Created_From_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Created From Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Prospects</relationshipLabel>
    <relationshipName>Prospects</relationshipName>
    <type>Lookup</type>
</CustomField>