force-app/main/default/objects/Prospect__c/fields/Created_From_Lead__c.field-meta.xml
<CustomField>
    <fullName>Created_From_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Created From Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Prospects (Created From Lead)</relationshipLabel>
    <relationshipName>Prospects1</relationshipName>
    <type>Lookup</type>
</CustomField>