force-app/main/default/objects/Prospect__c/fields/Duplicate_Detected__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_Detected__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This field is set when we try to create a Lead using the Prospect, but that fails due to a duplicate being detected.</inlineHelpText>
    <label>Duplicate Detected</label>
    <type>Checkbox</type>
</CustomField>