force-app/main/default/objects/Prospect__c/fields/Link_to_Main_Duplicate_Record__c.field-meta.xml
<CustomField>
    <fullName>Link_to_Main_Duplicate_Record__c</fullName>
    <formula>&quot;https://dfj.lightning.force.com/lightning/r/&quot;&amp; Main_Duplicate_ID__c&amp;&quot;/view&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Link to Main Duplicate Record</label>
    <type>Text</type>
</CustomField>