force-app/main/default/objects/Prospect__c/fields/Main_Duplicate_ID__c.field-meta.xml
<CustomField>
    <fullName>Main_Duplicate_ID__c</fullName>
    <inlineHelpText>Holds the ID of the Main Duplicate. The reason it is called Main Duplicate, is that there may have been more than 1 duplicate detected, and in that case, this is the ID of the Duplicate with the highest Matching Score.</inlineHelpText>
    <label>Main Duplicate ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>