force-app/main/default/objects/Prospect__c/fields/Main_Duplicate_Matching_Score__c.field-meta.xml
<CustomField>
    <fullName>Main_Duplicate_Matching_Score__c</fullName>
    <label>Main Duplicate Matching Score</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>