force-app/main/default/objects/Prospect__c/fields/Number_of_Duplicates_Detected__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Duplicates_Detected__c</fullName>
    <label>Number of Duplicates Detected</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>